United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6795913 A few remaining wrong casts need to be fixed for building hotspot successfully on Mac OS.
6795913 : A few remaining wrong casts need to be fixed for building hotspot successfully on Mac OS.

Details
Type:
Bug
Submit Date:
2009-01-20
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2009-02-11
Component:
hotspot
OS:
os_x
Sub-Component:
runtime
CPU:
x86
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs15
Fixed Versions:
hs15

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
The fix of 6787106 laid out the way for fixing the wrong cast between int32_t and intptr_t since on Mac OS X, they are not the same type. I accidentally left out a few places I supposed to check in. So we need to get these in as well.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/dc3ad84615cf
                                     
2009-01-26
EVALUATION

Use NULL_WORD which is now defined as (intptr_t)0 on 32 bit platform in the place where intptr_t is expected.
                                     
2009-01-20



Hardware and Software, Engineered to Work Together