6795913: A few remaining wrong casts need to be fixed for building hotspot successfully on Mac OS

Use NULL_WORD in the places where intptr_t is expected due to incompatible types between intptr_t & int32_t

Reviewed-by: phh, coleenp, never